<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DanceChill">

    <TextView
        android:id="@+id/textViewDanceChill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="77dp"
        android:text="@string/IWantTo"
        app:layout_constraintBottom_toTopOf="@+id/buttonDance"
        app:layout_constraintStart_toStartOf="@+id/buttonDance" />

    <Button
        android:id="@+id/buttonDance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="283dp"
        android:layout_marginEnd="147dp"
        android:layout_marginRight="147dp"
        android:text="@string/dance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonChill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:text="@string/chill"
        app:layout_constraintStart_toStartOf="@+id/buttonDance"
        app:layout_constraintTop_toBottomOf="@+id/buttonDance" />
</androidx.constraintlayout.widget.ConstraintLayout>