<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GoodKeywords"
    android:background="@drawable/gradient_background_goodmoods">


    <TextView
        android:id="@+id/textViewKeyword"
        android:layout_width="267dp"
        android:layout_height="96dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/chooseFeeling"
        android:textColor="#000000"
        android:textSize="36sp"
        android:textStyle="bold"
        app:fontFamily="@font/montserrat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <Button
        android:id="@+id/buttonJoy"
        android:layout_width="175dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/badmood_buttons"
        android:onClick="onClick"
        android:text="@string/joy"
        android:textColor="#FDFCFC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewKeyword" />

    <Button
        android:id="@+id/buttonTrust"
        android:layout_width="175dp"
        android:layout_height="60dp"
        android:layout_marginTop="76dp"
        android:background="@drawable/badmood_buttons"
        android:onClick="onClick"
        android:text="@string/trust"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/buttonJoy"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/buttonJoy"
        app:layout_constraintTop_toBottomOf="@+id/buttonJoy" />

    <Button
        android:id="@+id/buttonSurprise"
        android:layout_width="175dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/badmood_buttons"
        android:onClick="onClick"
        android:text="@string/surprise"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonTrust"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/buttonTrust"
        app:layout_constraintTop_toBottomOf="@+id/buttonTrust"
        app:layout_constraintVertical_bias="0.253" />
</androidx.constraintlayout.widget.ConstraintLayout>